--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  lottie: ^1.2.1
+  http: ^0.13.4
+  camera_camera: ^2.0.2
 
 dev_dependencies:
   flutter_test:
@@ -42,6 +45,7 @@ flutter:
   assets:
     - assets/images/mastercard.png
     - assets/images/contact_less.png
+    - assets/lotties/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
